hphp/test/zend/good/Zend/tests/offset_object.php.expectf

Fatal error: Cannot use array access on an object in %s/offset_object.php on line 4
